[package]
name = "athena_editor"
version = "0.1.0"
authors = ["The Athena Developers"]
license = "Apache-2.0"

[dependencies]
rustc-serialize = "*"

[dependencies.phosphorus]
git = "https://github.com/athena-org/phosphorus.git"
branch = "develop"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx_device_gl"

[dependencies.gfx_window_glutin]
git = "https://github.com/gfx-rs/gfx_window_glutin"

[dependencies.glutin]
git = "https://github.com/tomaka/glutin"
