[package]
name = "athena_editor"
version = "0.1.0"
authors = ["The Athena Developers"]
license = "Apache-2.0"

[dependencies]
glutin = "0.1.6"
gfx = "0.5.2"
gfx_device_gl = "0.3.1"
gfx_window_glutin = "0.1.1"
rustc-serialize = "0.3.14"

[dependencies.phosphorus]
git = "https://github.com/athena-org/phosphorus.git"
branch = "develop"
