[package]
name = "athena_editor"
version = "0.1.1"
authors = ["The Athena Developers"]
license = "Apache-2.0"

[dependencies]
glutin = "0.1.6"
gfx = "0.6.4"
gfx_device_gl = "0.4.0"
gfx_window_glutin = "0.2.0"
rustc-serialize = "0.3.14"

[dependencies.phosphorus]
git = "https://github.com/athena-org/phosphorus.git"
branch = "develop"
